--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Advanced CSS and SASS</title>
 </head>
+
 <body>
     <header class="header">
         <div class="logo-box">
@@ -22,6 +24,26 @@
         </div>
     </header>
 
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-8">
+                <h2 class="heading-secondary">
+                    Where does it come from?
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                   Text content
+                </div>
+                <div class="col-1-of-2">
+                   Image composition
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!--
     <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
@@ -88,9 +110,10 @@
                 Col 3 of 4
             </div>
         </div>
-
     </section>
+    -->
 
 
 </body>
+
 </html>
