add about section with new button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Where does it come from?
                 </h2>
@@ -34,7 +34,17 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                   Text content
+                   <h3 class="heading-teritary  u-margin-bottom-small">Where can I get some?</h3>
+                   <p class="paragraph">
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam, sequi consequuntur ipsam dolorem adipisci a provident temporibus sunt quaerat repellendus. Fugiat inventore voluptatem earum nemo soluta minima.
+                   </p>
+
+                   <h3 class="heading-teritary  u-margin-bottom-small">Where can I get some?</h3>
+                   <p class="paragraph">
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam, sequi consequuntur ipsam dolorem adipisci a provident temporibus sunt quaerat repellendus. Fugiat inventore voluptatem earum nemo soluta minima.
+                   </p>
+
+                   <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                    Image composition
