--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
-                   Image composition
+                   <div class="composition">
+                       <img src="img/o1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                       <img src="img/o2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                       <img src="img/o3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                   </div>
                 </div>
             </div>
         </section>
