--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/icon-font.css">
     <title>Advanced CSS and SASS</title>
 </head>
 
@@ -52,6 +53,18 @@
                        <img src="img/o2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
                        <img src="img/o3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-features">
+            
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary">World</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    </div>
                 </div>
             </div>
         </section>
