--- a/index.html
+++ b/index.html
@@ -62,8 +62,32 @@
                 <div class="col-1-of-4">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-world"></i>
-                        <h3 class="heading-tertiary">World</h3>
-                        <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">World</h3>
+                        <p class="feature-box__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam</p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-cup"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Cup</h3>
+                        <p class="feature-box__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam</p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-flag2"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Flag</h3>
+                        <p class="feature-box__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam</p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Heart</h3>
+                        <p class="feature-box__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam</p>
                     </div>
                 </div>
             </div>
