Create new section with cards

--- a/index.html
+++ b/index.html
@@ -35,29 +35,33 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                   <h3 class="heading-teritary  u-margin-bottom-small">Where can I get some?</h3>
-                   <p class="paragraph">
-                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam, sequi consequuntur ipsam dolorem adipisci a provident temporibus sunt quaerat repellendus. Fugiat inventore voluptatem earum nemo soluta minima.
-                   </p>
+                    <h3 class="heading-teritary  u-margin-bottom-small">Where can I get some?</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam, sequi consequuntur ipsam dolorem
+                        adipisci a provident temporibus sunt quaerat repellendus. Fugiat inventore voluptatem earum nemo
+                        soluta minima.
+                    </p>
 
-                   <h3 class="heading-teritary  u-margin-bottom-small">Where can I get some?</h3>
-                   <p class="paragraph">
-                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam, sequi consequuntur ipsam dolorem adipisci a provident temporibus sunt quaerat repellendus. Fugiat inventore voluptatem earum nemo soluta minima.
-                   </p>
+                    <h3 class="heading-teritary  u-margin-bottom-small">Where can I get some?</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam, sequi consequuntur ipsam dolorem
+                        adipisci a provident temporibus sunt quaerat repellendus. Fugiat inventore voluptatem earum nemo
+                        soluta minima.
+                    </p>
 
-                   <a href="#" class="btn-text">Learn more &rarr;</a>
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
-                   <div class="composition">
-                       <img src="img/o1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                       <img src="img/o2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                       <img src="img/o3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
-                   </div>
+                    <div class="composition">
+                        <img src="img/o1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                        <img src="img/o2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                        <img src="img/o3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                    </div>
                 </div>
             </div>
         </section>
         <section class="section-features">
-            
+
             <div class="row">
                 <div class="col-1-of-4">
                     <div class="feature-box">
@@ -92,6 +96,31 @@
                 </div>
             </div>
         </section>
+
+        <seciton class="section-tours">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Most popular tours
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                       <div class="card__side">
+                           TEXT
+                       </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    tour 2
+                </div>
+                <div class="col-1-of-3">
+                    tour 3
+                </div>
+            </div>
+        </seciton>
+
     </main>
 
     <!--
