add frontend of card white image and title

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <seciton class="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
-                    Most popular tours
+                    MY SERVICES
                 </h2>
             </div>
 
@@ -108,7 +108,15 @@
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            FRONT
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">Coding</span>
+                            </h4>
+                            <div class="card__details">
+                                Details
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
                             BACK
@@ -118,7 +126,15 @@
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            FRONT
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <div class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">Security</span>
+                            </div>
+                            <div class="card__details">
+                                Details
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-2">
                             BACK
@@ -128,7 +144,15 @@
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            FRONT
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <div class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">Marketing</span>
+                            </div>
+                            <div class="card__details">
+                                Details
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-3">
                             BACK
