--- a/index.html
+++ b/index.html
@@ -115,11 +115,22 @@
                                 <span class="card__heading-span card__heading-span--1">Coding</span>
                             </h4>
                             <div class="card__details">
-                                Details
+                                <ul>
+                                    <li>Coding</li>
+                                    <li>Coding</li>
+                                    <li>Coding</li>
+                                    <li>Coding</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card-price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn-white btn-animation">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -133,11 +144,22 @@
                                 <span class="card__heading-span card__heading-span--2">Security</span>
                             </div>
                             <div class="card__details">
-                                Details
+                                <ul>
+                                    <li>Security</li>
+                                    <li>Security</li>
+                                    <li>Security</li>
+                                    <li>Security</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-2">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card-price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn-white btn-animation">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -148,18 +170,34 @@
                                 &nbsp;
                             </div>
                             <div class="card__heading">
-                                    <span class="card__heading-span card__heading-span--3">Marketing</span>
+                                <span class="card__heading-span card__heading-span--3">Marketing</span>
                             </div>
                             <div class="card__details">
-                                Details
+                                <ul>
+                                    <li>Marketing</li>
+                                    <li>Marketing</li>
+                                    <li>Marketing</li>
+                                    <li>Marketing</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-3">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card-price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn-white btn-animation">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="" class="btn btn-orange btn-animation">Discover all services</a>
+            </div>
+
         </seciton>
 
     </main>
