fixed bug in the card section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </section>
 
-        <seciton class="section-tours">
+        <section class="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     MY SERVICES
@@ -197,8 +197,8 @@
             <div class="u-center-text u-margin-top-huge">
                 <a href="" class="btn btn-orange btn-animation">Discover all services</a>
             </div>
-
-        </seciton>
+        </section>
+        sec
 
     </main>
 
