--- a/index.html
+++ b/index.html
@@ -198,7 +198,35 @@
                 <a href="" class="btn btn-orange btn-animation">Discover all services</a>
             </div>
         </section>
-        sec
+
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                   We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./img/p1.jpg" alt="story_image" class="story__img">
+                        <figcaption class="story__caption">
+                            Rocco Smith
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Lorem ipsum dolor sit amet
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
