--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
         </section>
 
         <section class="section-stories">
+
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/beach.mp4" type="video/mp4">
+                    <source src="img/beach.webm" type="video/webm">
+                    Your browser is not supported!
+                </video>
+            </div>
+
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                    We make people genuinely happy
@@ -225,6 +234,30 @@
                         </p>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./img/p1.jpg" alt="story_image" class="story__img">
+                        <figcaption class="story__caption">
+                            Rocco Smith
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Lorem ipsum dolor sit amet
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Learn more &rarr;</a>
             </div>
         </section>
 
