Create Form input

--- a/index.html
+++ b/index.html
@@ -204,14 +204,13 @@
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="img/beach.mp4" type="video/mp4">
-                    <source src="img/beach.webm" type="video/webm">
-                    Your browser is not supported!
+                    <source src="img/beach.webm" type="video/webm"> Your browser is not supported!
                 </video>
             </div>
 
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
-                   We make people genuinely happy
+                    We make people genuinely happy
                 </h2>
             </div>
 
@@ -228,9 +227,9 @@
                             Lorem ipsum dolor sit amet
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit. Accusamus maiores laudantium nam Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Accusamus maiores laudantium nam
                         </p>
                     </div>
                 </div>
@@ -249,15 +248,40 @@
                             Lorem ipsum dolor sit amet
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores laudantium nam Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit. Accusamus maiores laudantium nam Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Accusamus maiores laudantium nam
                         </p>
                     </div>
                 </div>
             </div>
             <div class="u-center-text u-margin-top-huge">
                 <a href="#" class="btn-text">Learn more &rarr;</a>
+            </div>
+        </section>
+
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                <label for="email" class="form__label">Email address</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </section>
 
