add footer section

--- a/index.html
+++ b/index.html
@@ -305,8 +305,31 @@
                 </div>
             </div>
         </section>
-
     </main>
+
+    <footer class="footer">
+       <div class="footer__logo-box">
+           <img src="img/logo.png" alt="logo" class="footer__logo">
+           <div class="row">
+               <div class="col-1-of-2">
+                   <div class="footer__navigation">
+                       <ul class="footer__list">
+                           <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                           <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                           <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                           <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                           <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                       </ul> 
+                   </div>
+               </div>
+               <div class="col-1-of-2">
+                   <p class="footer__copyright">
+                        All rights reserved. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the publisher, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law. For permission requests, write to the publisher, addressed “Attention: Permissions Coordinator,” at the address below.
+                   </p>
+               </div>
+           </div>
+       </div> 
+    </footer>
 
     <!--
     <section class="grid-test">
