--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
-                    MY SERVICES
+                    POPULAR TOURS
                 </h2>
             </div>
 
@@ -208,7 +208,7 @@
                                     <p class="card-price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn-white btn-animation">Book now!</a>
+                                <a href="#popup" class="btn btn-white btn-animation">Book now!</a>
                             </div>
                         </div>
                     </div>
