--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/icon-font.css">
-    <title>Advanced CSS and SASS</title>
+    <title>Orange Fruit</title>
 </head>
 
 <body>
@@ -23,11 +23,11 @@
 
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+                <li class="navigation__item"><a href="#about" class="navigation__link">About</a></li>
+                <li class="navigation__item"><a href="#benfits" class="navigation__link">Your benefits</a></li>
+                <li class="navigation__item"><a href="#popular" class="navigation__link">Popular tours</a></li>
+                <li class="navigation__item"><a href="#stories" class="navigation__link">Stories</a></li>
+                <li class="navigation__item"><a href="#book" class="navigation__link">Book now</a></li>
             </ul>
         </nav>
     </div>
@@ -39,7 +39,7 @@
         <div class="text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary-main">Orange</span>
-                <span class="heading-primary-sub">is the best color</span>
+                <span class="heading-primary-sub">is a Fruit</span>
             </h1>
 
             <a href="#section-tours" class="btn btn-white btn-animation">Check Orange world</a>
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <section class="section-about">
+        <section id="about" class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Where does it come from?
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-features">
+        <section id="benfits" class="section-features">
 
             <div class="row">
                 <div class="col-1-of-4">
@@ -118,7 +118,7 @@
             </div>
         </section>
 
-        <section class="section-tours" id="section-tours">
+        <section class="section-tours" id="tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     POPULAR TOURS
@@ -220,7 +220,7 @@
             </div>
         </section>
 
-        <section class="section-stories">
+        <section class="section-stories" id="stories">
 
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
@@ -281,7 +281,7 @@
             </div>
         </section>
 
-        <section class="section-book">
+        <section class="section-book" id="book">
             <div class="row">
                 <div class="book">
                     <div class="book__form">
